# modulex

./: .env.example  .gitignore  CHANGELOG.md  README.md  api_documentation.md
.github/: SECURITY.md  SETUP.md
.github/workflows/: deploy-advanced.yml  deploy-dev-azure-vm.yml  docker-build-and-push.yml  release.yml
docker/: docker-compose.yml
docker/env-examples/: railway.env.example
docker/scripts/: reset_db_simple.sh
docker/user_configs/: custom_config.toml  example_config.toml
integrations/github/: main.py
integrations/r2r/: README.md  info.json  main.py
monitoring/: protmetheus.yml
monitoring/grafana/dashboards/: postegresql-dashboard.json
py/: Dockerfile  pyproject.toml
py/app/: __init__.py  main.py
py/app/api/: auth.py  integrations.py  system.py  tools.py
py/app/config/: load_config.py
py/app/core/: __init__.py  auth.py  config.py  database.py  encryption.py  toml_config.py  x_api_key_auth.py
py/app/models/: __init__.py  integration.py  user.py
py/app/services/: auth_service.py  integration_service.py  tool_service.py
py/app/services/auth_handlers/: __init__.py  base_oauth_handler.py  form_manual_auth_handler.py  github_oauth_handler.py  google_oauth_handler.py  manual_auth_factory.py  manual_auth_handler.py  oauth_handler_factory.py  r2r_manual_auth_handler.py  reddit_oauth_handler.py  slack_oauth_handler.py
py/integrations/gdrive/: info.json  main.py
py/integrations/github/: info.json  main.py
py/integrations/gmail/: info.json  main.py
py/integrations/n8n/: info.json  main.py
py/integrations/nellis-auction/: info.json  main.py
py/integrations/r2r/: info.json  main.py
py/integrations/r2r/config/: env.example
py/integrations/reddit/: debug_auth.py  info.json  main.py
py/migrations/: add_is_active_column.py
